fixed uneveness of randomizer and fave buttons

--- a/src/App.css
+++ b/src/App.css
@@ -259,13 +259,6 @@ li {
 
 }
 
-
-
-.navBar {
-  margin-bottom: 50px;
-}
-
-
 /* RANDOM GIFS BUTTON & FAVES BUTTON */
 .randomAndSave {
   display: flex;
